--- a/config.env.example
+++ b/config.env.example
@@ -32,11 +32,14 @@ DEYE_METRIC_GROUPS=string
 ## Sample multiinverter configuration with two loggers
 #
 # DEYE_LOGGER_COUNT=2
-
+# DEYE_LOGGER_FIRST_INDEX=1
+#
 # DEYE_LOGGER_1_IP_ADDRESS=192.168.0.1
 # DEYE_LOGGER_1_SERIAL_NUMBER=1234567890
 # DEYE_LOGGER_1_PROTOCOL=at
-
+#
 # DEYE_LOGGER_2_IP_ADDRESS=192.168.0.2
 # DEYE_LOGGER_2_SERIAL_NUMBER=1234567891
 # DEYE_LOGGER_2_PROTOCOL=at
+#
+# MQTT_TOPIC_PREFIX=deye/{{logger_index}}
